# Kavier

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: cli-efficiency.md  cli-performance.md  contributing.md  getting-started.md
docs/reproducibility_capsule/: reproducibility.md
docs/reproducibility_capsule/experiment1/figures_generation/: defense_results.ipynb  experiment_1_figure_accuracy.ipynb  experiment_1_figure_performance.ipynb  performance_numbers.csv  prefill_decode_accuracy.csv
docs/reproducibility_capsule/experiment1/input/: input_decode_accuracy.csv  input_prefill_accuracy.csv
docs/reproducibility_capsule/experiment2/figures_generation/: data.csv  experiment_2_plotter.ipynb
docs/reproducibility_capsule/experiment3/figures_generation/: data.csv  experiment_3_mf10-mf13.ipynb  experiment_3_plotter.ipynb
src/cli/: __init__.py  efficiency_cli.py  performance_cli.py
src/efficiency/: main.py
src/outputter/: __init__.py  opendc_schema.py  outputter.py
src/performance/: args.py  main.py  service.py
src/simulator/: __init__.py  config.py  constants.py  log.py
src/simulator/efficiency/: metrics.py
src/simulator/performance/: cache.py  metrics.py  runner.py  simulate.py
src/simulator/performance/util/: decode.py  gpu_utilization.py  kv_utilization.py  prefill.py  stream_writer.py
src/tests/: test_cache_basic.py  test_cli_validation.py  test_financial_efficiency.py  test_kv_utilization.py  test_outputter_roundtrip.py  test_sustainability_efficiency.py  test_timings.py
(+4 files in other folders)
